<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Logo"
        android:text="@string/app_name"
        android:textSize="@dimen/loginPageHeader"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:fontFamily="cursive"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textviewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_below="@+id/Logo"
        android:padding="8dp"
        android:text="@string/email_address"
        android:textColor="#ffffff"
        android:textSize="@dimen/loginPageHeading" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/textinputUsername"
        android:layout_below="@+id/textviewUsername"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:hint="@string/email_address"
            android:textColorHint="#636363"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textviewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinputUsername"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="22dp"
        android:padding="8dp"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:textSize="@dimen/loginPageHeading" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/textinputPassword"
        android:layout_below="@+id/textviewPassword"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="#000000"
            android:hint="@string/password"
            android:textColorHint="#636363"
            android:inputType="textPassword"

            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:textSize="@dimen/ButtonSize"
        android:textColor="#000000"
        android:layout_below="@id/textinputPassword"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:padding="8dp"
        android:text="@string/login"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:textSize="@dimen/ButtonSize"
        android:textColor="#ffffff"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/registerButton"
        android:padding="8dp"
        android:layout_marginTop="14dp"/>

</RelativeLayout>